tests/ast_interpreter/err_mutation_on_string.expected
<string>:3:5: error: only lists support indexing in assignments
    str[0] = 72;  // Strings are immutable
    ^^^^^^
