tests/ast_interpreter/err_mutation_on_string.nx
fun main() {
    var str = "hello";
    str[0] = 72;  // Strings are immutable
}